--- a/package.json
+++ b/package.json
@@ -71,9 +71,11 @@
   "dependencies": {
     "@barba/core": "^2.9.7",
     "@studio-freight/lenis": "^1.0.29",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "gsap": "^3.12.4",
     "imask": "^7.3.0",
+    "inputmask": "^5.0.8",
     "jquery": "^3.7.1",
     "lazysizes": "^5.3.2",
     "parsleyjs": "^2.9.2",
